# struct_magic

./: .clang-format  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  codecov.yml
.chglog/: config.yml
cmake/: FetchCatch2.cmake  struct_magicConfig.cmake.in
include/: struct_magic.h
test/: CMakeLists.txt  struct_magic_test.cpp
